[package]
name = "loro-go"
version = "1.11.2"
edition = "2021"

[lib]
name = "loro"
crate-type = ["staticlib"]

[[bin]]
name = "uniffi-bindgen-go"
path = "src/uniffi-bindgen-go.rs"

[dependencies]
loro-ffi = { git = "https://github.com/loro-dev/loro-ffi.git", tag = "v1.11.2" }
uniffi = { version = "0.28.3" }
uniffi-bindgen-go = { git = "https://github.com/NordSecurity/uniffi-bindgen-go.git", tag = "v0.4.0+v0.28.3" }

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[features]
cli = ["uniffi/cli"]

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
strip = true
