[package]
name = "loro-go"
version = "1.12.0"
edition = "2021"

[lib]
name = "loro"
crate-type = ["staticlib"]

[[bin]]
name = "uniffi-bindgen-go"
path = "src/uniffi-bindgen-go.rs"
required-features = ["cli"]

[dependencies]
loro-ffi = { git = "https://github.com/loro-dev/loro-ffi.git", tag = "v1.12.0", optional = true }
uniffi = { version = "0.31.1" }
uniffi-bindgen-go = { git = "https://github.com/NordSecurity/uniffi-bindgen-go.git", tag = "v0.7.1+v0.31.0", optional = true }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }

[features]
default = ["staticlib"]
staticlib = ["dep:loro-ffi"]
cli = ["uniffi/cli", "dep:uniffi-bindgen-go"]

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
strip = true
